// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react createContainer reloads your component when new data comes 1`] = `
<div
  style={
    Object {
      "color": "red",
    }
  }
>
  {
  "palette": {
    "rcCrycwndc": {
      "thing": {
        "stuff": {
          "one": "hello",
          "two": "world"
        }
      }
    }
  },
  "color": "red"
}
</div>
`;

exports[`react createContainer reloads your component when new data comes 2`] = `
<div
  style={
    Object {
      "color": "red",
    }
  }
>
  {
  "palette": {
    "rcCrycwndc": {
      "thing": {
        "stuff": {
          "one": "new",
          "two": "world"
        }
      }
    }
  },
  "color": "red"
}
</div>
`;

exports[`react createContainer renders the fragment in the container 1`] = `
<div
  style={
    Object {
      "color": "blue",
    }
  }
>
  {
  "palette": {
    "rcCrtfitc": {
      "color": {
        "hue": 255,
        "saturation": 255,
        "value": 255
      }
    }
  },
  "color": "blue"
}
</div>
`;

exports[`react graphqlGun provides apollo client syntax for container 1`] = `
<div
  style={
    Object {
      "color": "blue",
    }
  }
>
  {
  "data": {
    "color": {
      "hue": 255,
      "saturation": 255,
      "value": 255
    }
  },
  "color": "blue"
}
</div>
`;
